data/all_generated_tests/raw_wast_tests/call_InfiniteLoops_3397.wast
;; 6. **Test Description**: Formulate a test with a loop containing a function call that utilizes a local counter. A `br` instruction inside this function should terminate the loop when the counter surpasses a specific value set outside the loop.    - **Constraint**: Accurate local counter updates and correct loop-breaking using `br`.    - **Infinite Loop Relation**: Failure in counter update or `br` instruction would keep the loop running indefinitely.

(assert_invalid
  (module
    (func $loop-with-call (result i32)
      (local $counter i32)
      (local.set $counter (i32.const 0))
      (block $exit
        (loop $loop
          (call $increment-and-check (local.get $counter))
          (br_if $exit (i32.ge_u (local.get $counter) (i32.const 10)))
          (local.set $counter (i32.add (local.get $counter) (i32.const 1)))
          (br $loop)
        )
      )
      (local.get $counter)
    )
    (func $increment-and-check (param $count i32) (result i32)
      (br_if 0 (i32.ge_u (local.get $count) (i32.const 10)))
      (i32.const 0)
    )
  )
  "type mismatch"
)